# my_fastapi_users_app

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
fastapi-application/: .env.template  create_fastapi_app.py  create_superuser.py  errors_handlers.py  main.py  prestart.sh  run  run_main.py
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2025_06_16_0858-71582bc2b68d_create_users_table.py  2025_06_16_2239-8997d90c562b_create_access_tokens_table.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  auth.py  fastapi_users.py  messages.py  service.py  users.py
fastapi-application/api/dependencies/: fastapi_users.py  user_manager  users.py
fastapi-application/api/webhooks/: __init__.py  user.py
fastapi-application/core/: __init__.py  config.py  taskiq_broker.py
fastapi-application/core/authentication/: user_manager.py
fastapi-application/core/gunicorn/: application.py  logger.py
fastapi-application/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
fastapi-application/core/schemas/: user.py
fastapi-application/core/types/: user_id.py
fastapi-application/core/utils/: templates.py
fastapi-application/crud/: users.py
fastapi-application/mailing/: send_email.py  send_welcome_email.py
fastapi-application/middlewares/: middlewares.py  requests_count_middleware.py
fastapi-application/tasks/: __init__.py  welcome_email_notification.py
fastapi-application/templates/: index.html
fastapi-application/views/: __init__.py
(+6 files in other folders)
