[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pydantic = {extras = ["email"], version = "^2.11.5"}
pydantic-settings = "^2.9.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
python-dotenv = "^1.1.0"
orjson = "^3.10.18"
gunicorn = "^23.0.0"
aiohttp = "^3.12.13"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

